--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,9 @@
     <lombok.version>1.18.30</lombok.version>
     <jjwt.verion>0.9.1</jjwt.verion>
     <postgresql.version>42.6.0</postgresql.version>
+    <jackson.version>2.13.5</jackson.version>
+    <aws.sns.version>1.11.175</aws.sns.version>
+    <springframework.version>5.3.30</springframework.version>
   </properties>
 
   <dependencies>
@@ -51,6 +54,11 @@
       <version>${sprigboot.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-jms</artifactId>
+      <version>${springframework.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <version>${lombok.version}</version>
@@ -75,6 +83,16 @@
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
       <version>${postgresql.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.amazonaws</groupId>
+      <artifactId>aws-java-sdk-sns</artifactId>
+      <version>${aws.sns.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.datatype</groupId>
+      <artifactId>jackson-datatype-jsr310</artifactId>
+      <version>${jackson.version}</version>
     </dependency>
   </dependencies>
 
