--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,3 +15,11 @@ spring:
           hibernate.dialect: org.hibernate.dialect.PostgreSQLDialect
         hibernate:
             ddl-auto: update
+
+aws:
+    region: us-east-2
+    secretKey: qKMr4pIWlm6FabEq/ObOU6gKwFsWHScGD7hddSM6
+    accessKey: AKIARRQYZMUZTSJAMTYC
+    sns:
+      topic:
+        arn: arn:aws:sns:us-east-2:106352436531:paymentsTopic
